# template-python

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/: renovate.json5
.github/workflows/: python.yml
NAME/: cli.py
tests/: test_app.py
