[tool.poetry]
name = "NAME"
version = "0.0.1"
description = ""
authors = ["Jonathan Ballet <jon@multani.info>"]

[tool.poetry.dependencies]
python = "^3.12"
structlog = "24.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "1.11.1"
pytest = "8.3.2"
pytest-asyncio = "0.23.8"
pytest-cov = "5.0.0"
pytest-mypy = "0.10.3"
pytest-ruff = "0.4.1"
ruff = "0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# script = "NAME.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = """
--cov NAME
--cov-branch
--cov-report html
--cov-report term
--doctest-modules
--ruff
--ruff-format
--tb short
--verbose
--verbose
--mypy
"""
#--mypy
filterwarnings = [
]

testpaths = [
    "NAME",
    "tests",
]

[tool.mypy]
packages = ["NAME"]
