[project]
name = "NAME"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Ballet", email = "jon@multani.info" }
]
requires-python = ">=3.13"
dependencies = [
    "click==8.1.8",
    "structlog==25.3.0",
]

[project.scripts]
my-script = "NAME.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "pytest-mypy==1.0.1",
    "pytest-ruff==0.4.1",
    "ruff==0.11.8",
]

[tool.pytest.ini_options]
addopts = """
--cov NAME
--cov-branch
--cov-report html
--cov-report term
--doctest-modules
--ruff
--ruff-format
--tb short
--verbose
--verbose
--mypy
"""
testpaths = [
    "NAME",
    "tests",
]

[tool.mypy]
packages = [
    "NAME",
    "tests",
]
strict = true

[tool.ruff.lint]
ignore = [
    # It's OK to have long line
    "E501",
]
extend-select = [
    # Sort imports
    "I",
]

[tool.ruff.lint.isort]
force-single-line = true
